--- a/styles/mixins.css.scss
+++ b/styles/mixins.css.scss
@@ -30,5 +30,14 @@
   opacity:$num/100;
 }
 
+@mixin vertical-align {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+
 
 
