--- a/styles/mixins.css.scss
+++ b/styles/mixins.css.scss
@@ -38,6 +38,19 @@
   transform: translateY(-50%);
 }
 
+@mixin clearfix {
+    zoom:1;
+    &:before, &:after {
+        content: "\0020"; 
+        display: block; 
+        height: 0; 
+        overflow: hidden; 
+    }
+    &:after {
+        clear: both;
+    }
+}
+
 
 
 
