--- a/styles/mixins.css.scss
+++ b/styles/mixins.css.scss
@@ -34,6 +34,12 @@
   opacity:$num/100;
 }
 
+@mixin box-sizing {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 @mixin vertical-align {
   position: relative;
   top: 50%;
