--- a/styles/mixins.css.scss
+++ b/styles/mixins.css.scss
@@ -1,30 +1,39 @@
+// @include mixin_name(num, val);
+
 @mixin rounded($radius: 15px) {
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
   border-radius: $radius;
-  -moz-background-clip: padding; 
-  -webkit-background-clip: padding-box; 
-  background-clip: padding-box; 
-}
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+} // @mixin rounded
 
-@mixin rounded_part($side, $radius: 15px) {
+@mixin rounded-part($side, $radius: 15px) {
   border-#{$side}-radius: $radius;
   -moz-border-radius-#{$side}: $radius;
   -webkit-border-#{$side}-radius: $radius;
-  -moz-background-clip: padding; 
-  -webkit-background-clip: padding-box; 
-  background-clip: padding-box; 
-}
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+} // @mixin rounded-part
 
 @mixin box-shadow($top, $left, $blur, $color, $inset:"") {
   -webkit-box-shadow:$top $left $blur $color #{$inset};
   -moz-box-shadow:$top $left $blur $color #{$inset};
   box-shadow:$top $left $blur $color #{$inset};
-}
+} // @mixin box-shadow
 
-@mixin text_shadow($px, $color) {
+@mixin text-shadow($px, $color) {
   text-shadow: $px $color;
-}
+} // @mixin text-shadow
+
+@mixin box-sizing($type: "border-box") {
+  -webkit-box-sizing: $type;
+  -moz-box-sizing: $type;
+  box-sizing: $type;
+  &:before, &:after { -moz-box-sizing: $type; -webkit-box-sizing: $type; box-sizing: $type; }
+} // @mixin box-sizing
 
 @mixin opacity($num:100) {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$num)";
@@ -32,13 +41,7 @@
   -moz-opacity:$num/100;
   -khtml-opacity:$num/100;
   opacity:$num/100;
-}
-
-@mixin box-sizing {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+} // @mixin opacity
 
 @mixin vertical-align {
   position: relative;
@@ -46,23 +49,17 @@
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-}
+} // @mixin vertical-align
 
 @mixin clearfix {
     zoom:1;
     &:before, &:after {
-        content: "\0020"; 
-        display: block; 
-        height: 0; 
-        overflow: hidden; 
+        content: "\0020";
+        display: block;
+        height: 0;
+        overflow: hidden;
     }
     &:after {
         clear: both;
     }
-}
-
-
-
-
-
-
+} // @mixin clearfix
